[package]
name = "twitch-loco"
version = "0.1.0"
edition = "2021"
authors = ["Paulo Gabriel Justino Bezerra <contact@pgjbz.dev>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dotenv = "0.15.0"
irc-twitch = { path = "../irc-twitch" }

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"